--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,17 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@tailwind base;
+
+@tailwind components;
+
+.button {
+  @apply .bg-blue-100 .text-white .py-2 .px-5 .rounded-lg;
+  box-shadow: 0 2px 7px 0 #b0eaff;
+}
+
+.card {
+  @apply .bg-white .p-5
+}
+
+@tailwind utilities;
 
 // Variables
 @import 'variables';
-
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
